@@ -1,3 +1,9 @@
+2001-11-01  Bart Schaefer  <schaefer@zsh.org>
+
+	* 16197: Completion/Zsh/Command/.distfiles,
+	Completion/Zsh/Command/_limit, Completion/Zsh/Type/_limits,
+	Src/Builtins/rlimits.c: `limit' accepts `unlimited' as a value.
+
 2001-10-26  Wayne Davison  <wayned@users.sourceforge.net>
 
 	* 16184: Src/hist.c: Improved readhistline() to reject binary data
